# NEP_lammps

gpumd/NEP_GPU/: CMakeLists.txt  README.md
gpumd/NEP_GPU/interface/lammps/USER-NEP-GPU/: pair_nep_gpu.cpp  pair_nep_gpu.h  pair_nep_gpu_kokkos.cpp  pair_nep_spin_gpu.cpp  pair_nep_spin_gpu_kokkos.cpp
gpumd/NEP_GPU/interface/lammps/cmake/: enable_user-nep-gpu_cmake.sh  lammps_cmake_patch_user-nep-gpu.diff
gpumd/NEP_GPU/src/: nep_gpu_lammps_model.cu  nep_gpu_lammps_model.h  nep_gpu_model_lmp.cu  nep_gpu_model_lmp.cuh  nep_gpu_model_spin_lmp.cu  nep_gpu_model_spin_lmp.cuh  nep_lmp_bridge.cu  nep_lmp_bridge.cuh  nep_spin_lmp_bridge.cu  nep_spin_lmp_bridge.cuh
gpumd/NEP_GPU/src/utils/: nep_lmp_utils.cuh
gpumd/NEP_GPU/test_lmp/: lmp.in  log.lammps  traj.dump
gpumd/NEP_GPU/test_lmp_kk/: lmp.in  log.lammps  nep.txt  traj.dump
gpumd/NEP_GPU/test_lmp_kk/pred/: nep.in  stress_train.out  train.xyz  virial_train.out
gpumd/NEP_GPU/test_lmp_spin/: lmp.in  log.lammps  nep.txt  readme  spin_scan.py  spinv2_backend_check.cu  spinv2_mref_check.cu  traj.dump  verify_spinv2_benchmark.py
gpumd/NEP_GPU/test_lmp_spin_kk/: lmp.in  log.lammps  readme  traj.dump
gpumd/NEP_GPU/test_lmp_spin_kk/pred/: descriptor.out  energy_train.out  force_train.out  mforce_train.out  nep.in  nep.txt  stress_train.out  virial_train.out
gpumd/NEP_GPU/test_nep/: energy_train.out  force_train.out  main.cpp  verify_nep_gpu.cu  verify_nep_gpu.exp  verify_nep_gpu.lib  verify_nep_lmp_vs_cpu.exp  verify_nep_lmp_vs_cpu.lib
gpumd/NEP_GPU/test_nep_spin/: energy_train.out  force_train.out  mforce_train.out  nep.in  nep.txt  stress_train.out  verify_nep_spin_gpu.cu  verify_nep_spin_gpu.exp  verify_nep_spin_gpu.lib  virial_train.out
gpumd/NEP_GPU_origin/NEP_GPU/: README.md
gpumd/NEP_GPU_origin/src/: nep_gpu_lammps_model.cu  nep_gpu_lammps_model.h  nep_gpu_model_lmp.cu  nep_gpu_model_lmp.cuh  nep_gpu_model_spin_lmp.cu  nep_gpu_model_spin_lmp.cuh  nep_lmp_bridge.cu  nep_lmp_bridge.cuh  nep_spin_lmp_bridge.cu  nep_spin_lmp_bridge.cuh
gpumd/src/: apply_clang_format.sh  makefile  makefile.hip
gpumd/src/force/: adp.cu  adp.cuh  dftd3.cu  dftd3.cuh  dftd3para.cuh  dp.cu  dp.cuh  eam.cu  eam.cuh  eam_alloy.cu  eam_alloy.cuh  ewald.cu  ewald.cuh  fcp.cu  fcp.cuh  force.cu  force.cuh  force_constant.cu  force_constant.cuh  ilp_nep.cu  ilp_nep.cuh  ilp_tersoff.cu  ilp_tersoff.cuh  ilp_tmd_sw.cu  ilp_tmd_sw.cuh  lj.cu  lj.cuh  neighbor.cu  neighbor.cuh  (+20 more)
lammps/cmake/: CMakeLists.txt
lammps/src/: variable.cpp  version.h
(+330 files in other folders)
